--- a/scss/_columns.scss
+++ b/scss/_columns.scss
@@ -5,14 +5,18 @@
 	justify-content: space-around;
 
 	.column-left {
-        width: 75%
+        width: 70%
     }
 
 	.column-right {
 		display: flex;
 		flex-direction: column;
-		flex-basis: 300px;
+		flex-basis: 350px;
 		align-items: center;
+
+        h3 {
+            margin-bottom: 0;
+        }
 
         .book-card {
             display: flex;
@@ -60,10 +64,6 @@
                     }
                 }
             }
-        }
-
-        &:first-child {
-            margin-top: 2.15rem;
         }
 	}
 }
