--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -39,6 +39,7 @@ nav {
         background-color: $primary-color-dark-2;
 		margin: 0;
 		margin-top: 0.3rem;
+        margin-bottom: 0.1rem;
 		padding: 0;
 		font-size: 0.8rem;
 
